# computer-architecture

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  config.yaml  h origin-ssh  index.html  sitemap.xml  synth_and_flash.sh
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_ubuntu.json  devcontainer_windows.json  entrypoint.sh  latex.Dockerfile  open.Dockerfile  rust.vivado.Dockerfile  sshd_config
.github/: labeler.yml  pull_request_template.md
Curs/: index.html
Echipa/: index.html
Evaluare/: index.html
Lab0 - Recapitulare/: index.html
Lab1 - Verilog/: index.html
Lab2 - Verilog/: index.html
Lab3 - Verilog/: index.html
Lab4 - Verilog/: index.html
Laboratoare/: index.html
Laboratoare AA AC/: index.html
Laboratoare AB/: index.html
Notare/: index.html
Practică Verilog/: index.html
Practică Verilog AA AC/: index.html
Regulament/: index.html
Template Chapter/: index.html
Tutoriale/: index.html
chapters/rhdl/nexys-a7/: Cargo.toml
chapters/rhdl/nexys-a7/src/: lib.rs  options.rs  tcl.rs
chapters/rhdl/nexys-a7/src/drivers/: input.rs  mod.rs  output.rs  sys_clk.rs
chapters/rhdl/nexys-a7/tests/: counter_xc7a100t.rs
chapters/rhdl/skel-cd/: Cargo.toml  cd.txt  cram.data  test.asm  top.v
chapters/rhdl/skel-cd/src/: alu.rs  control_unit.rs  cpu.rs  decode_unit.rs  main.rs  memory.rs  prelude.rs  register.rs  register_file.rs
chapters/rhdl/synth-skel/: Cargo.toml
chapters/rhdl/synth-skel/src/: count.rs  main.rs  ssg.rs  util.rs
didasm/: Cargo.toml  Makefile  Readme.md
docker/: .gitignore  Dockerfile  Makefile  README.md  (+1 more)
(+1706 files in other folders)
