[package]
name = "cd-rhdl"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = "7.6.0"
rhdl = {git = "https://github.com/Pfat8EqualsD/rhdl.git", branch="signal"}
rhdl-fpga = {git = "https://github.com/Pfat8EqualsD/rhdl.git", branch="signal"}
bitops-rhdl = {path = "../bitops_rhdl"}
colored = "3.0.0"
termion = "4.0.5"
